# BCppTools

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/bcpptools/core/: bcerror.h  bctypes.h
include/bcpptools/hash/: bcbase64.hpp
include/bcpptools/math/: bcprime.h  bcvector3.h
include/bcpptools/multimedia/image/: bccolor.h
include/bcpptools/time/: bcclock.hpp
test/: testHashBase64.cpp  testTimeClock.cpp
